# lib/api-spec/openapi.yaml
@@ -174,6 +174,20 @@ components:
           type: string
         available:
           type: boolean
+        hideWhenFull:
+          type: boolean
+        blockedTimes:
+          type: array
+          items:
+            type: object
+            properties:
+              start:
+                type: string
+              end:
+                type: string
+            required:
+              - start
+              - end
       required:
         - id
         - label
@@ -204,6 +218,8 @@ components:
           type: string
         endTime:
           type: string
+        hideWhenFull:
+          type: boolean
     Booking:
       type: object
       properties:
@@ -223,6 +239,10 @@ components:
           type: string
         priority3:
           type: string
+        priority4:
+          type: string
+        priority5:
+          type: string
         createdAt:
           type: string
       required:
@@ -232,8 +252,6 @@ components:
         - name
         - email
         - priority1
-        - priority2
-        - priority3
         - createdAt
     CreateBookingRequest:
       type: object
@@ -250,13 +268,15 @@ components:
           type: string
         priority3:
           type: string
+        priority4:
+          type: string
+        priority5:
+          type: string
       required:
         - timeSlotId
         - name
         - email
         - priority1
-        - priority2
-        - priority3
     ErrorResponse:
       type: object
       properties:
