# lib/db/src/schema/timeslots.ts
@@ -33,8 +33,10 @@ export const bookingsTable = pgTable("bookings", {
   name: text("name").notNull(),
   email: text("email").notNull(),
   priority1: text("priority1").notNull(),
-  priority2: text("priority2").notNull(),
-  priority3: text("priority3").notNull(),
+  priority2: text("priority2").notNull().default(""),
+  priority3: text("priority3").notNull().default(""),
+  priority4: text("priority4"),
+  priority5: text("priority5"),
   createdAt: timestamp("created_at").notNull().defaultNow(),
   assignedPriority: integer("assigned_priority"),
   assignedTime: text("assigned_time"),
